# BB

./: .gitattributes  .gitignore  README.md  pyproject.toml
amd_scripts/: 00_check_env.sbatch  00_install_deps.sbatch  01_download_metadata.sbatch  02_prepare_datacomp.sbatch  02_prepare_datacomp_array.sbatch  02_prepare_datacomp_bundle.sbatch  02_submit_prepare_array.sbatch  03_encode_manifest_chunk.sbatch  03_encode_shards_array.sbatch  04_submit_encode_array.sbatch  05_train_8mi300.sbatch  README.md  common.sh  make_encode_chunks.py  status.sh  submit_data_pipeline.sh  submit_next_encode_chunk.sh
attention/: __init__.py  linear.py  monarch.py  standard.py
bb/: __init__.py  config.py  data.py  diffusion.py  distributed.py  sample_dit.py  train.py  train_dit.py  train_vit.py
bb/models/: __init__.py  dit.py  ema.py  vit.py
configs/: cifar100_dit.yaml  cifar100_vit.yaml  cifar10_dit.yaml  cifar10_vit.yaml  imagenet_vit_b16_paper_scratch.yaml  pretrain_datacomp_0_6b.yaml  smoke.yaml  smoke_dit.yaml  smoke_imagenet_vit.yaml  smoke_vit.yaml
docs/: datacomp.md
examples/: train_mi300_8gpu.sh
scripts/: download_datacomp_metadata.py  encode_shards.py  prepare_datacomp.py  report_vit_metrics.py  sample_dit.py  slurm_imagenet_vit_mi2104x.sbatch  train.py  train_cifar_dit.sh  train_cifar_vit.sh  train_dit.py  train_imagenet_vit_mi2104x.sh  train_vit.py
src/: __init__.py  config.py  data.py  distributed.py  sample_dit.py  train_dit.py  train_vit.py  utils.py
src/models/: __init__.py  ema.py  vit.py
tools/: sample_dit.py  train_dit.py  train_vit.py
