[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-imagegen"
version = "0.1.0"
description = "Small-scale ImageGen pretraining stack for DataComp-1B experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.33",
  "diffusers>=0.30",
  "huggingface-hub>=0.24",
  "img2dataset>=1.45",
  "numpy>=1.26",
  "pillow>=10",
  "pyarrow>=15",
  "pyyaml>=6",
  "requests>=2.32",
  "safetensors>=0.4",
  "torch>=2.3",
  "torchvision>=0.18",
  "tqdm>=4.66",
  "transformers>=4.43",
  "webdataset>=0.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["bb*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
