[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-cifar-transformers"
version = "0.1.0"
description = "CIFAR classification with ViT and class-conditional image generation with DiT."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pillow>=10",
  "pyyaml>=6",
  "torch>=2.3",
  "torchvision>=0.18",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["attention*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
